--- a/templates/index.html
+++ b/templates/index.html
@@ -5,45 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sentiment classifier</title>
-  <style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'PT Sans', sans-serif;
-  font-size: 18px;
-}
-
-form {
-  max-width: 512px;
-  margin: 90px auto;
-}
-
-textarea, button {
-  width: 100%;
-  font-family: inherit;
-  font-size: inherit;
-  padding: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-}
-
-textarea {
-  background: #fafafa;
-}
-
-textarea:focus {
-  border-color: #2b7bde;
-  outline: none;
-}
-
-button {
-  text-align: center;
-  font-weight: bold;
-  color: #fff;
-  background: #2b7bde;
-}
-  </style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
   <form action="prediction" id="form">
