--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,7 @@ textarea, button, output {
   font-size: inherit;
   padding: 10px;
   border: 1px solid rgba(0, 0, 0, 0.3);
+  margin: 4px 0;
 }
 
 textarea {
@@ -35,7 +36,10 @@ button {
   font-weight: bold;
   color: #fff;
   background: #2b7bde;
-  margin: 8px 0;
+}
+
+.predicted button {
+  display: none;
 }
 
 output {
@@ -44,7 +48,7 @@ output {
   color: #fff;
 }
 
-output.positive, output.neutral, output.negative {
+.predicted output {
   display: block;
 }
 
